MDEV-11188: rpl.rpl_parallel_partition fails with valgrind warnings in buildbot and outside